--- a/GuardianCapitalLLC/Views/Account/ResetPassword.cshtml
+++ b/GuardianCapitalLLC/Views/Account/ResetPassword.cshtml
@@ -6,6 +6,18 @@
 	Layout = "_ClientLayout";
 }
 
+<nav aria-label="breadcrumb">
+	<ol class="breadcrumb breadcrumb-style mg-b-0">
+		<li class="breadcrumb-item">
+			<a>Guardian Capital</a>
+		</li>
+		<li class="breadcrumb-item">
+			<a asp-controller="Account" asp-action="Index">Account</a>
+		</li>
+		<li class="breadcrumb-item active">Reset pin number</li>
+	</ol>
+</nav>
+
 <div class="mt-2 account-information">
 	<div class="card bg-gray-200 bd-0">
 		<div class="card-body">
