--- a/GuardianCapitalLLC/Views/Account/Index.cshtml
+++ b/GuardianCapitalLLC/Views/Account/Index.cshtml
@@ -6,6 +6,30 @@
 	bool isPrivilegedUser = User.Identity != null && User.Identity.IsAuthenticated &&
 							privilegedUsers.Contains(User.Identity.Name);
 }
+
+<div class="banner">
+	<div class="geometric-shapes">
+		<div class="shape"></div>
+		<div class="shape"></div>
+		<div class="shape"></div>
+	</div>
+
+	<div class="content">
+		<h1 class="main-heading">Timely Information</h1>
+		<h2 class="sub-heading">About Your Investments</h2>
+	</div>
+</div>
+<nav aria-label="breadcrumb">
+	<ol class="breadcrumb breadcrumb-style mg-b-0">
+		<li class="breadcrumb-item">
+			<a>Guardian Capital</a>
+		</li>
+		<li class="breadcrumb-item active">
+			<a>Account</a>
+		</li>
+	</ol>
+</nav>
+
 <div class="row account-information">
 	<div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12">
 		<div class="row">
@@ -18,13 +42,13 @@
 									<div class="text-justified align-items-center">
 										<h3 class="text-dark font-weight-semibold mb-2 mt-0">Welcome back, <span class="text-primary">@Model.FullName</span></h3>
 									</div>
-									<div>
+									<div class="mt-3 mt-lg-0">
 										<a class="btn btn-dark" href="https://video.goldco.com/tom-selleck-gold-silver-kit-g-042125/?cq_net=%7Bnetwork%7D&cq_plac=%7Bplacement%7D&cq_plt=gdp&cq_term=%7Bkeyword%7D&gad_campaignid=22633263768&gad_source=2&gclid=Cj0KCQjws4fEBhD-ARIsACC3d2-ThJQ0aEBV_BBoWJ6T-aRaCBDV_cLNi_CEfphx-ddPjh2K7vwiKpQaAtprEALw_wcB&ls=001-Video-Youtube-Internal&sfcid=701Qh00000Xbb5e&utm_campaign=701Qh00000Xbb5e&utm_medium=Video&utm_medium=cpc&utm_source=Youtube-Internal&utm_source=google&utm_term=" target="_blank">
 											<img src="~/img/75f068f3-white-goldco-logo-gold-flame_106g02g06e02g000000000.png" alt="GoldCo Logo" style="height: 32px; width: auto;">
 										</a>
-										@* <a class="btn" href="" target="_blank" style="background-color:#1c3464"> *@
-										@* 	<img src="~/img/maximustitle.png" alt="Maximus Title Logo" style="height: 32px; width: auto;"> *@
-										@* </a> *@
+										<a class="btn" href="https://maximustitlellc.com" style="background-color:#1c3464"> 
+											<img src="~/img/maximustitle.png" alt="Maximus Title Logo" style="height: 32px; width: auto;"> 
+										</a>
 									</div>
 								</div>
 							</div>
@@ -87,7 +111,7 @@
 								<h3 class="card-title mb-2">Account Summary</h3>
 							</div>
 							<div class="browser-stats">
-								<div class="d-flex align-items-center item  border-bottom my-2">
+								<div class="d-flex flex-column flex-lg-row align-items-lg-center item  border-bottom my-2">
 									<div class="d-flex">
 										<div class="">
 											<span class="font-weight-semibold tx-20">Total Balance</span>
@@ -101,7 +125,7 @@
 								</div>
 								@foreach (BankAccount bankAccount in Model.BankAccounts)
 								{
-									<div class="d-flex align-items-center item  border-bottom my-2">
+									<div class="d-flex flex-column flex-lg-row align-items-lg-center item border-bottom my-2">
 										<div class="d-flex">
 											<div>
 												<h6>@Regex.Replace(bankAccount.Type.ToString(), "(\\B[A-Z])", " $1") Account</h6>
@@ -219,7 +243,11 @@
 													}
 													else
 													{
-														<div class="avatar bg-info rounded-circle align-items-center justify-content-center mx-2">
+														<img src="~/img/@(item.Symbol.ToLower().Trim().Replace(" ", "").Replace(":", "")).png"
+															 alt="@item.Symbol"
+															 class="rounded-circle mx-2 ht-30 wd-30 me-2"
+															 onerror="this.onerror=null; this.style.display='none'; this.nextElementSibling.style.display='flex';" />
+														<div class="avatar bg-info rounded-circle align-items-center justify-content-center mx-2" style="display: none;">
 															@item.Symbol?[0]
 														</div>
 													}
@@ -230,7 +258,6 @@
 												</div>
 												<div class="ms-auto my-auto">
 													<div class="d-flex">
-														<span class="me-4 mt-1 font-weight-semibold tx-16 market-price" data-usd="@item.Current">@item.Current?.ToString("N2")</span>
 														<span class="@colorClass fs-13 my-auto">
 															<i class="fe @arrowIcon @colorClass mx-2 my-auto"></i>
 															@percent.ToString("N2")%
@@ -251,7 +278,28 @@
 													<div class="row border-end bd-xs-e-0 p-3">
 														<div class="col-3 d-flex align-items-center justify-content-center">
 															<div class="circle-icon bg-primary text-center align-self-center overflow-hidden shadow">
-																<i class="fe fe-shopping-bag tx-15 text-white"></i>
+																<i class="fas fa-dollar-sign tx-15 text-white"></i>
+															</div>
+														</div>
+														<div class="col-9 py-0">
+															<div class="pt-4 pb-3">
+																<div class="d-flex">
+																	<h6 class="mb-2 tx-12">Current price</h6>
+																</div>
+																<div class="pb-0 mt-0">
+																	<div class="d-flex">
+																		<h4 class="tx-18 font-weight-semibold mb-0 market-price" data-usd="@item.Current">@item.Current?.ToString("N2")</h4>
+																	</div>
+																</div>
+															</div>
+														</div>
+													</div>
+												</div>
+												<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
+													<div class="row border-end bd-xs-e-0 p-3">
+														<div class="col-3 d-flex align-items-center justify-content-center">
+															<div class="circle-icon bg-info text-center align-self-center overflow-hidden shadow">
+																<i class="fas fa-exchange-alt tx-15 text-white"></i>
 															</div>
 														</div>
 														<div class="col-9 py-0">
@@ -271,8 +319,8 @@
 												<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
 													<div class="row border-end bd-xs-e-0  p-3">
 														<div class="col-3 d-flex align-items-center justify-content-center">
-															<div class="circle-icon bg-secondary text-center align-self-center overflow-hidden shadow">
-																<i class="fe fe-external-link tx-15 text-white"></i>
+															<div class="circle-icon bg-success text-center align-self-center overflow-hidden shadow">
+																<i class="mdi mdi-chevron-double-up tx-15 text-white"></i>
 															</div>
 														</div>
 														<div class="col-9">
@@ -292,8 +340,8 @@
 												<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
 													<div class="row  p-3">
 														<div class="col-3 d-flex align-items-center justify-content-center">
-															<div class="circle-icon bg-info text-center align-self-center overflow-hidden shadow">
-																<i class="fe fe-credit-card tx-15 text-white"></i>
+															<div class="circle-icon bg-danger text-center align-self-center overflow-hidden shadow">
+																<i class="mdi mdi-chevron-double-down tx-15 text-white"></i>
 															</div>
 														</div>
 														<div class="col-9">
@@ -395,17 +443,58 @@
 </div>
 @if (!Model.IsBanned)
 {
-	<div class="d-flex flex-row justify-content-between mt-4 account-information">
-		<div>
-			<a class="btn btn-outline-primary" asp-action="PrintProfile" asp-controller="Account">🖨️ Print User Profile</a>
-			<a class="btn btn-outline-primary" asp-action="ResetPassword" asp-controller="Account">Reset Your Pin Number</a>
+	<div class="d-flex flex-column flex-lg-row justify-content-between mt-4 account-information">
+		<div class="d-flex flex-column flex-lg-row">
+			<a class="btn btn-outline-primary mt-2 mt-lg-0" asp-action="PrintProfile" asp-controller="Account">Print User Profile</a>
+			<a class="btn btn-outline-primary mt-2 mt-lg-0 ms-0 ms-lg-2" asp-action="ResetPassword" asp-controller="Account">Reset Your Pin Number</a>
 		</div>
-		<div>
-			<a class="btn btn-outline-primary" asp-action="Download8300" asp-controller="Account">Download Form 8300</a>
-			<a class="btn btn-outline-primary" asp-action="DownloadT3" asp-controller="Account">Download T3 Tax Form</a>
+		<div class="d-flex flex-column flex-lg-row">
+			<a class="btn btn-outline-primary mt-2 mt-lg-0" asp-action="Download8300" asp-controller="Account">Download Form 8300</a>
+			<a class="btn btn-outline-primary mt-2 mt-lg-0 ms-0 ms-lg-2" asp-action="DownloadT3" asp-controller="Account">Download T3 Tax Form</a>
 		</div>
 	</div>
 }
+
+<div class="accent-line2 mt-5"></div>
+<div class="row row-sm contact-info">
+	<div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+		<div class="card bg-gray-400 bd-0">
+			<div class="card-body text-muted">
+				<h5 class="card-title text-dark tx-medium mg-b-10">Vancouver Office</h5>
+				<p class="card-subtitle mg-b-15 mt-3">Marine Building</p>
+				<p class="card-subtitle mg-b-15">355 Burrard Street • Suite 1610</p>
+				<p class="card-subtitle mg-b-15">Vancouver, BC V6C 2GB</p>
+				<p class="card-subtitle mg-b-15 mt-3">E: <span class="text-dark">vancouver@guardiancapital.com</span></p>
+				<p class="card-subtitle mg-b-15">T: <span class="text-dark">1-877-704-2430</span></p>
+			</div>
+		</div>
+	</div>
+	<div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+		<div class="card bg-gray-400 bd-0">
+			<div class="card-body text-muted">
+				<h5 class="card-title text-dark tx-medium mg-b-10">Calgary Office</h5>
+				<p class="card-subtitle mg-b-15 mt-3">Bentall Kennedy Building</p>
+				<p class="card-subtitle mg-b-15">1030 - 640 5th Avenue S.W.</p>
+				<p class="card-subtitle mg-b-15">Calgary, AB T2P 3G4</p>
+				<p class="card-subtitle mg-b-15 mt-3">E: <span class="text-dark">calgary@guardiancapital.com</span></p>
+				<p class="card-subtitle mg-b-15">T: <span class="text-dark">1-877-704-2430</span></p>
+			</div>
+		</div>
+	</div>
+	<div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+		<div class="card bg-gray-400 bd-0">
+			<div class="card-body text-muted">
+				<h5 class="card-title text-dark tx-medium mg-b-10">Toronto Office</h5>
+				<p class="card-subtitle mg-b-15 mt-3">Commerce Court West</p>
+				<p class="card-subtitle mg-b-15">199 Bay Street • Suite 3100</p>
+				<p class="card-subtitle mg-b-15">PO Box 201 • Toronto, Ontario. M5L 1E8</p>
+				<p class="card-subtitle mg-b-15 mt-3">E: <span class="text-dark">toronto@guardiancapital.com</span></p>
+				<p class="card-subtitle mg-b-15">T: <span class="text-dark">1-877-704-2430</span></p>
+				<p class="card-subtitle mg-b-15">T: <span class="text-dark">437-886-2825</span></p>
+			</div>
+		</div>
+	</div>
+</div>
 
 <script>
 
