--- a/GuardianCapitalLLC/Views/Account/PrintProfile.cshtml
+++ b/GuardianCapitalLLC/Views/Account/PrintProfile.cshtml
@@ -13,6 +13,16 @@
 
 	}
 </style>
+<nav aria-label="breadcrumb">
+	<ol class="breadcrumb breadcrumb-style mg-b-0">
+		<li class="breadcrumb-item">
+			<a>Guardian Capital</a>
+		</li>
+		<li class="breadcrumb-item">
+			<a asp-controller="Account" asp-action="Index">Account</a>
+		</li>
+	</ol>
+</nav>
 <div class="row account-information">
 	<div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12">
 		<div class="row">
@@ -31,7 +41,7 @@
 								<h3 class="card-title mb-2">Account Summary</h3>
 							</div>
 							<div class="browser-stats">
-								<div class="d-flex align-items-center item  border-bottom my-2">
+								<div class="d-flex flex-column flex-lg-row align-items-lg-center item  border-bottom my-2">
 									<div class="d-flex">
 										<div class="">
 											<span class="font-weight-semibold tx-20">Total Balance</span>
@@ -47,10 +57,16 @@
 								</div>
 								@foreach (BankAccount bankAccount in Model.BankAccounts)
 								{
-									<div class="d-flex align-items-center item  border-bottom my-2">
+									<div class="d-flex flex-column flex-lg-row align-items-lg-center item  border-bottom my-2">
 										<div class="d-flex">
 											<div class="">
-												<h6 class="">@Regex.Replace(bankAccount.Type.ToString(), "(\\B[A-Z])", " $1") Account</h6>
+												<h6>@Regex.Replace(bankAccount.Type.ToString(), "(\\B[A-Z])", " $1") Account</h6>
+												<span class="tx-12">
+													Account number:
+													<span class="account-number-mask" data-full="@bankAccount.AccountNumber">
+														****@bankAccount.AccountNumber[^4..]
+													</span>
+												</span>
 											</div>
 										</div>
 										<div class="ms-auto my-auto">
