--- a/GuardianCapitalLLC/Views/BankAccount/Index.cshtml
+++ b/GuardianCapitalLLC/Views/BankAccount/Index.cshtml
@@ -2,6 +2,10 @@
 @using System.Text.RegularExpressions
 @using System.Globalization
 
+@{
+	var returnUrl = Context.Request.Query["returnUrl"].ToString();
+}
+
 <div class="mt-2">
 	<div class="card bg-gray-200 bd-0">
 		<div class="card-body">
@@ -228,6 +232,12 @@
 		</div>
 	</div>
 </div>
+
+@if (!string.IsNullOrEmpty(returnUrl))
+{
+	<a href="@returnUrl" class="btn btn-primary mb-5">Go Back</a>
+}
+
 <script>
 
 	const formattedInput = document.getElementById('AmountInput');
