Commit switch to passwords

--- a/GuardianCapitalLLC/Views/Account/Index.cshtml
+++ b/GuardianCapitalLLC/Views/Account/Index.cshtml
@@ -446,7 +446,7 @@
 	<div class="d-flex flex-column flex-lg-row justify-content-between mt-4 account-information">
 		<div class="d-flex flex-column flex-lg-row">
 			<a class="btn btn-outline-primary mt-2 mt-lg-0" asp-action="PrintProfile" asp-controller="Account">Print User Profile</a>
-			<a class="btn btn-outline-primary mt-2 mt-lg-0 ms-0 ms-lg-2" asp-action="ResetPassword" asp-controller="Account">Reset Your Pin Number</a>
+			<a class="btn btn-outline-primary mt-2 mt-lg-0 ms-0 ms-lg-2" asp-action="ResetPassword" asp-controller="Account">Reset Your Password</a>
 		</div>
 		<div class="d-flex flex-column flex-lg-row">
 			<a class="btn btn-outline-primary mt-2 mt-lg-0" asp-action="Download8300" asp-controller="Account">Download Form 8300</a>
