--- a/GuardianCapitalLLC/Views/Account/TransferFundsToInternalAccount.cshtml
+++ b/GuardianCapitalLLC/Views/Account/TransferFundsToInternalAccount.cshtml
@@ -70,8 +70,8 @@
 				</div>
 
 				<div class="form-group">
-					<label class="form-label">Security Pin</label>
-					<input asp-for="Pin" type="password" class="form-control" placeholder="Enter your pin">
+					<label class="form-label">Password / Security Pin</label>
+					<input asp-for="Pin" type="password" class="form-control" placeholder="Enter your password / pin">
 				</div>
 
 				<div class="modal-footer">
