--- a/GuardianCapitalLLC/Views/Account/ResetPassword.cshtml
+++ b/GuardianCapitalLLC/Views/Account/ResetPassword.cshtml
@@ -14,7 +14,7 @@
 		<li class="breadcrumb-item">
 			<a asp-controller="Account" asp-action="Index">Account</a>
 		</li>
-		<li class="breadcrumb-item active">Reset pin number</li>
+		<li class="breadcrumb-item active">Reset password</li>
 	</ol>
 </nav>
 
@@ -39,26 +39,26 @@
 					<div class="media-body">
 						<div class="d-flex align-items-center">
 							<div class="mt-0">
-								<h5 class="mb-1 tx-20 font-weight-sembold text-dark">Reset your pin number</h5>
-								<p class="mb-0 tx-12 text-dark">Securely reset your pin number</p>
+								<h5 class="mb-1 tx-20 font-weight-sembold text-dark">Reset your password</h5>
+								<p class="mb-0 tx-12 text-dark">Securely reset your password</p>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="form-group mt-5">
-					<label class="form-label">Enter your new pin number</label>
+					<label class="form-label">Enter your new password</label>
 					<input asp-for="NewPassword" type="password" class="form-control"
-						   placeholder="Enter your new pin" pattern="\d{4}" maxlength="4" inputmode="numeric" />
+						   placeholder="Enter your new password"/>
 				</div>
 				<div class="form-group">
-					<label class="form-label">Re-enter your new pin number</label>
+					<label class="form-label">Re-enter your password</label>
 					<input asp-for="NewPasswordConfirm" type="password" class="form-control"
-						   placeholder="Enter your new pin again" pattern="\d{4}" maxlength="4" inputmode="numeric" />
+						   placeholder="Enter your new password again"/>
 				</div>
 				<div class="form-group">
-					<label class="form-label">Enter your old pin number</label>
+					<label class="form-label">Enter your old password</label>
 					<input asp-for="OldPassword" type="password" class="form-control"
-						   placeholder="Enter your old pin" pattern="\d{4}" maxlength="4" inputmode="numeric" />
+						   placeholder="Enter your old password"/>
 				</div>
 				<div>
 					<span class="tx-12 mb-0 text-muted market-price" data-usd="5">
@@ -67,7 +67,7 @@
 				</div>
 				<div class="modal-footer">
 					<a asp-controller="Account" asp-action="Index" class="btn btn-outline-dark ms-4 px-5">Cancel</a>
-					<button type="submit" class="btn btn-info px-5">Reset Pin Number</button>
+					<button type="submit" class="btn btn-info px-5">Reset Password</button>
 				</div>
 			</form>
 		</div>
