--- a/GuardianCapitalLLC/Views/Account/TransferFundsToExternalAccount.cshtml
+++ b/GuardianCapitalLLC/Views/Account/TransferFundsToExternalAccount.cshtml
@@ -89,8 +89,8 @@
 					<textarea asp-for="Description" type="text" class="form-control" placeholder="Add a note or description for this transfer"></textarea>
 				</div>
 				<div class="form-group">
-					<label class="form-label">Security Pin</label>
-					<input asp-for="Pin" type="password" class="form-control" placeholder="Enter your pin">
+					<label class="form-label">Password / Security Pin</label>
+					<input asp-for="Pin" type="password" class="form-control" placeholder="Enter your password / pin">
 				</div>
 				<div class="modal-footer">
 					<a asp-controller="Account" asp-action="Index" class="btn btn-outline-dark ms-4 px-5">Cancel</a>
