--- a/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
+++ b/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
@@ -33,10 +33,8 @@
 	<link href="~/switcher/demo.css" rel="stylesheet" />
 
 	<link href="~/css/account.css?v=2" rel="stylesheet" />
-
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2905505798857213" crossorigin="anonymous"></script>
 </head>
-<body class="main-body app ltr sidebar-gone horizontal">
+<body class="ltr main-body app sidebar-mini">
 
 	<!-- Loader -->
 	<div id="global-loader">
@@ -46,30 +44,69 @@
 	<!-- Page -->
 	<div class="page">
 		<div>
+			<!-- main-header -->
+			<div class="main-header side-header sticky nav nav-item account-information">
+				<div class=" main-container container-fluid">
+					<div class="main-header-left ">
+						<div class="responsive-logo">
+							<a asp-controller="Account" asp-action="Index" class="header-logo">
+								<img src="~/img/brand/logo.png" class="mobile-logo logo-1" alt="logo">
+							</a>
+						</div>
+						@* <div class="app-sidebar__toggle" data-bs-toggle="sidebar"> *@
+						@* 	<a class="open-toggle" href="javascript:void(0);"><i class="header-icon fe fe-align-left"></i></a> *@
+						@* 	<a class="close-toggle" href="javascript:void(0);"><i class="header-icon fe fe-x"></i></a> *@
+						@* </div> *@
+						<div class="logo-horizontal">
+							<a asp-controller="Account" asp-action="Index" class="header-logo">
+								<img src="~/img/brand/logo.png" class="mobile-logo logo-1" alt="logo">
+							</a>
+						</div>
+					</div>
+					<div class="main-header-right">
+						<button class="navbar-toggler navresponsive-toggler d-lg-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon fe fe-more-vertical "></span>
+						</button>
+						<div class="mb-0 navbar navbar-expand-lg navbar-nav-right responsive-navbar navbar-dark p-0">
+							<div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+								<ul class="nav nav-item header-icons navbar-nav-right ms-auto">
+									@if (User.Identity.IsAuthenticated && ViewBag.Hide != true)
+									{
+										<li class="nav-item main-header-notification mx-2 tx-bold">
+											<a href="#" id="logout-link" class="text-danger">LOG OUT</a>
+										</li>
+									}
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- /main-header -->
+			<!-- main-sidebar -->
+			<div class="sticky" style="z-index:1000;">
+				<aside class="app-sidebar">
+					<div class="main-sidebar-header active">
+						<a class="header-logo active" asp-controller="Account" asp-action="Index">
+							<img src="~/img/brand/logo.png" class="main-logo  desktop-logo" alt="logo">
+							<img src="~/img/brand/favicon.png" class="main-logo  mobile-logo" alt="logo">
+						</a>
+					</div>
+					<div class="main-sidemenu">
+						@if (User.Identity.IsAuthenticated)
+						{
+							
+						}
+					</div>
+				</aside>
+			</div>
+			<!-- main-sidebar -->
+		</div>
+		<div>
 			<!-- main-content -->
 			<div class="main-content app-content">
 				<!-- container -->
 				<div class="main-container container-fluid">
-					<!-- breadcrumb -->
-					<div class="breadcrumb-header justify-content-between align-items-center">
-						<div class="left-content">
-							<img src="~/img/brand/logo.png">
-						</div>
-						<div class="justify-content-center mt-2">
-							<ol class="breadcrumb">
-								<li class="breadcrumb-item">
-									@if (User.IsInRole("Client") && ViewBag.Hide != true)
-									{
-										<div class="justify-content-center mt-2">
-											<a href="#" id="logout-link" class="btn btn-danger">Log Out</a>
-										</div>
-									}
-								</li>
-							</ol>
-						</div>
-					</div>
-					<!-- /breadcrumb -->
-					
 					@RenderBody()
 				</div>
 			</div>
