--- a/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
+++ b/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<!-- Title -->
-	<title> Guardian Capital - Account </title>
+	<title>@ViewData["Title"]</title>
 
 	<!-- Favicon -->
 	<link rel="icon" href="~/img/brand/favicon.png" type="image/x-icon" />
@@ -53,10 +53,10 @@
 								<img src="~/img/brand/logo.png" class="mobile-logo logo-1" alt="logo">
 							</a>
 						</div>
-						@* <div class="app-sidebar__toggle" data-bs-toggle="sidebar"> *@
-						@* 	<a class="open-toggle" href="javascript:void(0);"><i class="header-icon fe fe-align-left"></i></a> *@
-						@* 	<a class="close-toggle" href="javascript:void(0);"><i class="header-icon fe fe-x"></i></a> *@
-						@* </div> *@
+						<div class="app-sidebar__toggle" data-bs-toggle="sidebar"> 
+							<a class="open-toggle" href="javascript:void(0);"><i class="header-icon fe fe-align-left"></i></a> 
+							<a class="close-toggle" href="javascript:void(0);"><i class="header-icon fe fe-x"></i></a> 
+						</div>
 						<div class="logo-horizontal">
 							<a asp-controller="Account" asp-action="Index" class="header-logo">
 								<img src="~/img/brand/logo.png" class="mobile-logo logo-1" alt="logo">
@@ -84,7 +84,7 @@
 			</div>
 			<!-- /main-header -->
 			<!-- main-sidebar -->
-			<div class="sticky" style="z-index:1000;">
+			<div class="sticky account-information" style="z-index:1000;">
 				<aside class="app-sidebar">
 					<div class="main-sidebar-header active">
 						<a class="header-logo active" asp-controller="Account" asp-action="Index">
@@ -93,23 +93,22 @@
 						</a>
 					</div>
 					<div class="main-sidemenu">
-						@if (User.Identity.IsAuthenticated)
-						{
-							@* <div class="slide-left disabled" id="slide-left"><svg xmlns="http://www.w3.org/2000/svg" fill="#7b8191" width="24" height="24" viewBox="0 0 24 24"><path d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"/></svg></div> *@
-							@* <ul class="side-menu"> *@
-							@* 	<li class="side-item side-item-category">Main</li> *@
-							@* 	<li class="slide"> *@
-							@* 		<a class="side-menu__item" data-bs-toggle="slide" href="javascript:void(0);"><svg xmlns="http://www.w3.org/2000/svg"  class="side-menu__icon" width="24" height="24" viewBox="0 0 24 24"><path d="M3 13h1v7c0 1.103.897 2 2 2h12c1.103 0 2-.897 2-2v-7h1a1 1 0 0 0 .707-1.707l-9-9a.999.999 0 0 0-1.414 0l-9 9A1 1 0 0 0 3 13zm7 7v-5h4v5h-4zm2-15.586 6 6V15l.001 5H16v-5c0-1.103-.897-2-2-2h-4c-1.103 0-2 .897-2 2v5H6v-9.586l6-6z"/></svg><span class="side-menu__label">Dashboards</span><i class="angle fe fe-chevron-right"></i></a> *@
-							@* 		<ul class="slide-menu"> *@
-							@* 			<li class="side-menu__label1"><a href="javascript:void(0);">Dashboards</a></li> *@
-							@* 			<li><a class="slide-item" href="index.html">Dashboard-1</a></li> *@
-							@* 			<li><a class="slide-item" href="index1.html">Dashboard-2</a></li> *@
-							@* 			<li><a class="slide-item" href="index2.html">Dashboard-3</a></li> *@
-							@* 		</ul> *@
-							@* 	</li> *@
-							@* </ul> *@
-							@* <div class="slide-right" id="slide-right"><svg xmlns="http://www.w3.org/2000/svg" fill="#7b8191" width="24" height="24" viewBox="0 0 24 24"><path d="M10.707 17.707 16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z" /></svg></div> *@
-						}
+						@* @if (User.Identity.IsAuthenticated && ViewBag.IsBanned!) *@
+						@* { *@
+						@* 	<div class="slide-left disabled" id="slide-left"><svg xmlns="http://www.w3.org/2000/svg" fill="#7b8191" width="24" height="24" viewBox="0 0 24 24"><path d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"/></svg></div> *@
+						@* 	<ul class="side-menu"> *@
+						@* 		<li class="slide"> *@
+						@* 			<a class="side-menu__item" asp-controller="Account" asp-action="Index"><svg xmlns="http://www.w3.org/2000/svg" class="side-menu__icon" width="24" height="24" viewBox="0 0 24 24"><i class="fa fa-home mg-r-10"></i></svg><span class="side-menu__label">Home</span></a> *@
+						@* 		</li> *@
+						@* 		<li class="slide"> *@
+						@* 			<a class="side-menu__item" asp-controller="Account" asp-action="Balance"><svg xmlns="http://www.w3.org/2000/svg" class="side-menu__icon" width="24" height="24" viewBox="0 0 24 24"><i class="fa fa-credit-card mg-r-10"></i></svg><span class="side-menu__label">Your Money</span></a> *@
+						@* 		</li> *@
+						@* 		<li class="slide"> *@
+						@* 			<a class="side-menu__item" asp-controller="Account" asp-action="Activity"><svg xmlns="http://www.w3.org/2000/svg" class="side-menu__icon" width="24" height="24" viewBox="0 0 24 24"><i class="fa fa-bars mg-r-10"></i></svg><span class="side-menu__label">Activity</span></a> *@
+						@* 		</li> *@
+						@* 	</ul> *@
+						@* 	<div class="slide-right" id="slide-right"><svg xmlns="http://www.w3.org/2000/svg" fill="#7b8191" width="24" height="24" viewBox="0 0 24 24"><path d="M10.707 17.707 16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z" /></svg></div> *@
+						@* } *@
 					</div>
 				</aside>
 			</div>
