--- a/GuardianCapitalLLC/Views/Account/PrintProfile.cshtml
+++ b/GuardianCapitalLLC/Views/Account/PrintProfile.cshtml
@@ -2,6 +2,7 @@
 @using System.Text.RegularExpressions
 @{
 	Layout = "_ClientLayout";
+	ViewData["Title"] = "Guardian Capital - Account";
 }
 <style>
 	@@media print {
