Commit small rework

--- a/GuardianCapitalLLC/Views/Account/Index.cshtml
+++ b/GuardianCapitalLLC/Views/Account/Index.cshtml
@@ -62,7 +62,7 @@
 				<div class="col-xl-12 col-lg-12 col-md-12 col-xs-12">
 					<div class="card p-2 bg-danger">
 						<div class="card-body text-white d-flex flex-column">
-							<span class="tx-bold tx-15">Your account is currently banned for the following reason: </span>
+							@* <span class="tx-bold tx-15">Your account is currently banned for the following reason: </span> *@
 							<span class="tx-15">
 								@Model.BanReason
 							</span>
