Commit massive changes 2

--- a/GuardianCapitalLLC/Views/Account/Deposit.cshtml
+++ b/GuardianCapitalLLC/Views/Account/Deposit.cshtml
@@ -79,16 +79,39 @@
 					<span class="mb-0 tx-15 text-dark">Other accepted payment methods</span>
 					<ul class="icons-list">
 						<li class="icons-list-item" data-bs-placement="top" data-bs-toggle="tooltip" title="Western Union (Contact support for more information)">
-							<img src="~/img/payments/westernunion-dark.svg" alt="Western Union" style="height: 24px; width: auto;">
+							<a href="https://www.westernunion.com" target="_blank" rel="noopener noreferrer">
+								<img src="~/img/payments/westernunion-dark.svg" alt="Western Union" style="height: 24px; width: auto;">
+							</a>
 						</li>
 						<li class="icons-list-item" data-bs-placement="top" data-bs-toggle="tooltip" title="Moneygram (Contact support for more information)">
-							<img src="~/img/payments/moneygram-seeklogo.svg" alt="Moneygram" style="height: 24px; width: auto;">
+							<a href="https://www.moneygram.com" target="_blank" rel="noopener noreferrer">
+								<img src="~/img/payments/moneygram-seeklogo.svg" alt="MoneyGram" style="height: 24px; width: auto;">
+							</a>
 						</li>
 						<li class="icons-list-item" data-bs-placement="top" data-bs-toggle="tooltip" title="Wells Fargo (Contact support for more information)">
-							<img src="~/img/payments/WFC.svg" alt="Wells Fargo" style="height: 24px; width: auto;">
+							<a href="https://www.wellsfargo.com" target="_blank" rel="noopener noreferrer">
+								<img src="~/img/payments/WFC.svg" alt="Wells Fargo" style="height: 24px; width: auto;">
+							</a>
 						</li>
 						<li class="icons-list-item" data-bs-placement="top" data-bs-toggle="tooltip" title="Chase Bank (Contact support for more information)">
-							<img src="~/img/payments/Chase_Bank-Logo.wine.svg" alt="Chase Bank" style="height: 24px; width: auto;">
+							<a href="https://www.chase.com" target="_blank" rel="noopener noreferrer">
+								<img src="~/img/payments/Chase_Bank-Logo.wine.svg" alt="Chase Bank" style="height: 24px; width: auto;">
+							</a>
+						</li>
+						<li class="icons-list-item" data-bs-placement="top" data-bs-toggle="tooltip" title="RBC Bank (Contact support for more information)">
+							<a href="https://www.rbcroyalbank.com/" target="_blank" rel="noopener noreferrer">
+								<img src="~/img/payments/RY_BIG.svg" alt="RBC Bank" style="height: 24px; width: auto;">
+							</a>
+						</li>
+						<li class="icons-list-item" data-bs-placement="top" data-bs-toggle="tooltip" title="Bank of America (Contact support for more information)">
+							<a href="https://www.bankofamerica.com" target="_blank" rel="noopener noreferrer">
+								<img src="~/img/payments/BAC_BIG.svg" alt="Bank of America" style="height: 24px; width: auto;">
+							</a>
+						</li>
+						<li class="icons-list-item" data-bs-placement="top" data-bs-toggle="tooltip" title="PNC Bank (Contact support for more information)">
+							<a href="https://www.pnc.com" target="_blank" rel="noopener noreferrer">
+								<img src="~/img/payments/PNC_BIG.svg" alt="PNC Bank" style="height: 24px; width: auto;">
+							</a>
 						</li>
 					</ul>
 				</div>
