--- a/GuardianCapitalLLC/Views/Users/Details.cshtml
+++ b/GuardianCapitalLLC/Views/Users/Details.cshtml
@@ -84,6 +84,26 @@
 						<button type="submit" class="btn btn-warning">Generate New Password</button>
 					</form>
 				</div>
+				<div class="mt-5">
+					<form asp-controller="Users" asp-action="SendTaxFormEmail" method="post" class="d-inline mt-2 mt-lg-0">
+						@Html.AntiForgeryToken()
+
+						<input name="userId" type="text" value="@Model.Id" hidden />
+
+						<input name="userEmail" type="email" value="@Model.PersonalEmail" hidden />
+						<div class="form-group">
+							<input type="text" name="date" class="form-control" placeholder="Enter the date of the transaction" />
+						</div>
+
+						<div class="form-group">
+							<input type="text" name="amount" class="form-control" placeholder="Enter the amount of the transaction (in USD)" />
+						</div>
+
+						<input type="text" name="userFullName" value="@Model.FullName" hidden/>
+
+						<button type="submit" class="btn btn-warning">Generate New Password</button>
+					</form>
+				</div>
 				@if (Model.Files != null && Model.Files.Any())
 				{
 					<div class="mt-5">
