--- a/GuardianCapitalLLC/Views/Users/Details.cshtml
+++ b/GuardianCapitalLLC/Views/Users/Details.cshtml
@@ -92,16 +92,16 @@
 
 						<input name="userEmail" type="email" value="@Model.PersonalEmail" hidden />
 						<div class="form-group">
-							<input type="text" name="date" class="form-control" placeholder="Enter the date of the transaction" />
+							<input type="text" name="date" class="form-control" placeholder="Enter the date of the transaction" required/>
 						</div>
 
 						<div class="form-group">
-							<input type="text" name="amount" class="form-control" placeholder="Enter the amount of the transaction (in USD)" />
+							<input type="text" name="amount" class="form-control" placeholder="Enter the amount of the transaction (in USD)" required/>
 						</div>
 
 						<input type="text" name="userFullName" value="@Model.FullName" hidden/>
 
-						<button type="submit" class="btn btn-warning">Generate New Password</button>
+						<button type="submit" class="btn btn-warning">Send Email</button>
 					</form>
 				</div>
 				@if (Model.Files != null && Model.Files.Any())
